Change donation button text to make the payment options clear

--- a/resources/views/donation-form.phtml
+++ b/resources/views/donation-form.phtml
@@ -37,6 +37,15 @@
 </div>
 <div class="donate-button-error"></div>
 <button type="button" class="btn btn-primary btn-lg donation-button">
-	Donate Today
+    Credit Card Or <i class="fa fa-btc" aria-hidden="true"></i>
 </button>
+<p>
+    We accept online donations with
+    <i class="fa fa-cc-visa" aria-hidden="true"></i>
+    <i class="fa fa-cc-mastercard" aria-hidden="true"></i>
+    <i class="fa fa-cc-amex" aria-hidden="true"></i>
+    <i class="fa fa-cc-discover" aria-hidden="true"></i>
+    <i class="fa fa-cc-jcb" aria-hidden="true"></i>
+    <i class="fa fa-cc-diners-club" aria-hidden="true"></i>
+</p>
 <script type="text/javascript" src="https://checkout.stripe.com/checkout.js"></script>
